# ceesvee

./: .gitattributes  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
branding/: README.md
samples/: example.csv
scripts/: build-latest-json.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyze.rs  annotations.rs  append.rs  archive.rs  clipboard.rs  cluster.rs  columnar_export.rs  commands.rs  compare.rs  crossval.rs  db_browser.rs  db_export.rs  dedup.rs  delimiter.rs  derived.rs  diagnostics.rs  dialect.rs  dictionary.rs  document.rs  dto.rs  encoding.rs  error.rs  excel.rs  export.rs  export_scope.rs  facets.rs  filter.rs  find.rs  follow.rs  groupby.rs  highlight.rs  index.rs  job.rs  joins.rs  journal.rs  json_export.rs  json_import.rs  lib.rs  main.rs  outlier.rs  (+25 more)
src/components/: AnnotationExportDialog.tsx  AnnotationsPanel.tsx  AppendDialog.tsx  ArchiveEntryDialog.tsx  CellEditorDialog.tsx  ChangesPanel.tsx  ClusterDialog.tsx  ColumnExplorerPanel.tsx  ColumnMenu.tsx  ColumnarExportDialog.tsx  ColumnsPicker.tsx  CommandPalette.tsx  CompareDialog.tsx  CopyAsDialog.tsx  CrossValDialog.tsx  DatabaseDialog.tsx  DbExportDialog.tsx  DedupDialog.tsx  DiagnosticsPanel.tsx  DialectDialog.tsx  DictionaryDialog.tsx  EmptyState.tsx  EncodingIssuesDialog.tsx  ExcelExportDialog.tsx  ExcelOpenDialog.tsx  ExportDialog.tsx  ExternalChangeDialog.tsx  FacetsPanel.tsx  FilterDialog.tsx  FindBar.tsx  FollowBar.tsx  FormView.tsx  Grid.tsx  GroupByDialog.tsx  HighlightRulesDialog.tsx  Icons.tsx  JoinDialog.tsx  JsonExportDialog.tsx  JsonImportDialog.tsx  Logo.tsx  (+34 more)
src/lib/: annotations.test.ts  annotations.ts  append.test.ts  append.ts  cellRef.ts  cellText.test.ts  cellText.ts  changes.test.ts  changes.ts  clustering.test.ts  clustering.ts  columnar.test.ts  columnar.ts  commandDefs.ts  commands.test.ts  commands.ts  compare.test.ts  compare.ts  copyTarget.test.ts  copyTarget.ts  crossval.test.ts  crossval.ts  dbExport.test.ts  dbExport.ts  diagnostics.test.ts  diagnostics.ts  dictionary.test.ts  dictionary.ts  excel.test.ts  excel.ts  explorer.test.ts  explorer.ts  export.test.ts  export.ts  facets.test.ts  facets.ts  follow.test.ts  follow.ts  format.test.ts  format.ts  (+58 more)
src/store/: useStore.test.ts  useStore.ts
